--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  background: lightcyan;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -24,5 +25,5 @@ p {
   margin: 0;
   padding: auto;
   color: black;
-  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  font-family:Verdana;
 }
